// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultCard card styles and structure are present 1`] = `
.c0 {
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12),0px -8px 0px 0px #d73f09;
  overflow: hidden;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  margin-top: 8px;
  margin-bottom: 24px;
}

.c1 {
  border: 0;
  background: transparent;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  min-height: 68px;
}

.c1:hover {
  cursor: initial;
}

.c1.cardheader-clickable {
  cursor: pointer;
}

.c2 {
  font-size: 24px;
  font-family: 'Stratum2',sans-serif;
  font-weight: bold;
}

.c3 {
  font-family: 'Open Sans',sans-serif;
  font-size: 16px;
  font-weight: 300;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  overflow: hidden;
  max-height: 0;
  padding: 0;
  padding-top: 0;
}

@media screen and (min-width:768px) {
  .c0 {
    margin-top: 8px;
  }
}

<div
  class="c0"
  color="orange"
  elevation="1"
>
  <button
    class="cardheader-clickable c1"
  >
    <div>
      <div
        class="c2"
      >
        Default Card
      </div>
      <div
        class="c3"
      >
        Subtitle
      </div>
    </div>
  </button>
  <div
    aria-expanded="false"
    class="c4"
  >
    <p>
      DefaultCard Content
    </p>
  </div>
</div>
`;

exports[`SimpleCard Orange card styles and structure are present 1`] = `
.c0 {
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12),0px -8px 0px 0px #d73f09;
  overflow: hidden;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  margin-top: 8px;
  margin-bottom: 24px;
}

.c1 {
  border: 0;
  background: transparent;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  min-height: 68px;
}

.c1:hover {
  cursor: initial;
}

.c1.cardheader-clickable {
  cursor: pointer;
}

.c2 {
  font-size: 24px;
  font-family: 'Stratum2',sans-serif;
  font-weight: bold;
}

.c3 {
  font-family: 'Open Sans',sans-serif;
  font-size: 16px;
  font-weight: 300;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  overflow: hidden;
  max-height: 0;
  padding: 0;
  padding-top: 0;
}

@media screen and (min-width:768px) {
  .c0 {
    margin-top: 8px;
  }
}

<div
  class="c0"
  color="orange"
  elevation="1"
>
  <button
    class="cardheader-clickable c1"
  >
    <div>
      <div
        class="c2"
      >
        Header Button
      </div>
      <div
        class="c3"
      >
        Subtitle
      </div>
    </div>
  </button>
  <div
    aria-expanded="false"
    class="c4"
  >
    <p>
      Card Content
    </p>
  </div>
</div>
`;

exports[`Stratosphere card styles and structure are present 1`] = `
.c0 {
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12),0px -8px 0px 0px #006a8e;
  overflow: hidden;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  margin-top: 8px;
  margin-bottom: 24px;
}

.c1 {
  border: 0;
  background: transparent;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  min-height: 68px;
}

.c1:hover {
  cursor: initial;
}

.c1.cardheader-clickable {
  cursor: pointer;
}

.c2 {
  font-size: 24px;
  font-family: 'Stratum2',sans-serif;
  font-weight: bold;
}

.c3 {
  font-family: 'Open Sans',sans-serif;
  font-size: 16px;
  font-weight: 300;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  overflow: hidden;
  max-height: 0;
  padding: 0;
  padding-top: 0;
}

@media screen and (min-width:768px) {
  .c0 {
    margin-top: 8px;
  }
}

<div
  class="c0"
  color="stratosphere"
  elevation="1"
>
  <button
    class="cardheader-clickable c1"
  >
    <div>
      <div
        class="c2"
      >
        Stratosphere Card
      </div>
      <div
        class="c3"
      >
        Subtitle
      </div>
    </div>
  </button>
  <div
    aria-expanded="false"
    class="c4"
  >
    <p>
      DefaultCard Content
    </p>
  </div>
</div>
`;
